first pull request

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,6 +1,6 @@
 @import "visually-hidden";
 @import "container";
-@import "header";
+@import "pricing-header";
+@import "pricing-hero";
 
-
-@import "footer"
+@import "pricing-footer"
