--- a/scss/blocks/_pricing-hero.scss
+++ b/scss/blocks/_pricing-hero.scss
@@ -1,6 +1,8 @@
 
 @include for-size (phone-only) {
     ol{
+        padding: 0;
+        margin: 0;
         list-style: none;
     }
     
@@ -56,9 +58,9 @@
             content: " ";
         }
     }
-
-
-
+    
+    
+    
     
     .price__item{
         width: 145px;
@@ -73,83 +75,72 @@
             content: " ";
         }
     }
-
-    .price__list:nth-child(1) .price__item::before{
-        background-image: none;
-    }
-
-        // .price__list{
-    //     &:nth-child(1){
-    //         .price__item{
-    //             &::before{
-    //                 background-image: none;
-    //             }
-    //         }
-    //     }
-    // }
     
     
-    // .price__item:nth-child(4){
-        //     &::before{
-            
-            //     }
-            // }
-            
-            
-            .price__item-link{
-                @include txt-formats("Public Sans", 16px, 28px, #36536B);
-                text-align: left;
-            }
-            
-            .price__button{
-                
-                @include site-button(168px, #36536B, transparent);
-                display: block;
-                margin: 0 auto;
-                border: 1px solid #36536B;
-                box-shadow: none;
-                
-            }
-            
-            .article{
-                padding: 80px 0;
-            }
-            
-            .article__title{
-                margin-bottom: 32px;
-                @include txt-formats('DM Serif Display', 32px, 36px,  #36536B)
-            }
-            
-            .article__label{
-                display: block;
-                width: 100%;
-                max-width: 445px;
-                margin: 0 auto;
-            }
-            
-            .article__input{
-                width: 100%;
-                max-width: 445px;
-                margin-bottom: 16px;
-                padding: 16px 25px;
-                font-weight: 700;
-                @include txt-formats('Public Sans', 18px, 18px,  #36536B);
-                text-align: left;
-                background-color:#FBFCFE;
-                box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
-                border-radius: 24px;
-                border: none;
-                
-            }
-            
-            .article__btn{
-                
-                @include site-button(327px, #fff, #BA4270);
-                display: block;
-                width: 100%;
-                max-width: 445px;
-                margin: 0 auto;
-                border: none
+    .price__box{
+        &:nth-child(1){
+            .price__item{
+                &:nth-child(1n+4):before{
+                    background-image: none;
+                }
             }
         }
         
+    }
+
+    .price__item-link{
+        @include txt-formats("Public Sans", 16px, 28px, #36536B);
+        text-align: left;
+    }
+    
+    .price__button{
+        
+        @include site-button(168px, #36536B, transparent);
+        display: block;
+        margin: 0 auto;
+        border: 1px solid #36536B;
+        box-shadow: none;
+        
+    }
+    
+    .article{
+        padding: 80px 0;
+    }
+    
+    .article__title{
+        margin-bottom: 32px;
+        @include txt-formats('DM Serif Display', 32px, 36px,  #36536B)
+    }
+    
+    .article__label{
+        display: block;
+        width: 100%;
+        max-width: 445px;
+        margin: 0 auto;
+    }
+    
+    .article__input{
+        width: 100%;
+        max-width: 445px;
+        margin-bottom: 16px;
+        padding: 16px 25px;
+        font-weight: 700;
+        @include txt-formats('Public Sans', 18px, 18px,  #36536B);
+        text-align: left;
+        background-color:#FBFCFE;
+        box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+        border-radius: 24px;
+        border: none;
+        
+    }
+    
+    .article__btn{
+        
+        @include site-button(327px, #fff, #BA4270);
+        display: block;
+        width: 100%;
+        max-width: 445px;
+        margin: 0 auto;
+        border: none
+    }
+}
