--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -17,7 +17,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    background-color: #edf3f8;
 }
 
 ul {
