--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #f2f2f2;
+  background-color: #EDF3F8;
 }
 
 ul {
@@ -59,13 +59,22 @@ a {
   padding: 0 25px;
 }
 
-@media (max-width: 785px) {
+@media (min-width: 320px) {
+  body {
+    -o-border-image: none;
+       border-image: none;
+    overflow-x: hidden;
+  }
   .header {
     padding: 40px 0 52px;
-    background-image: url("../images/Bitmap-header-circle.svg");
+    background-image: url("../images/header-bg.svg");
     background-repeat: no-repeat;
     background-size: 780px 780px;
     background-position: calc(50% + 269px) calc(50% - 328px);
+  }
+  .home--header {
+    padding: 40px 0 166px;
+    background-position: 50% calc(50% - 286px);
   }
   .sitenav,
 .header__hamburger-close,
@@ -98,15 +107,13 @@ a {
     border: none;
   }
 }
-@media (min-width: 786px) {
-  body {
-    background-size: 780px 780px;
-    background-image: url("../images/Bitmap-header-circle.svg");
-    background-position: calc(50% - 1px) calc(50% + 1px);
-    background-repeat: no-repeat;
-  }
+@media (min-width: 768px) {
   .header {
-    padding: 40px 0 52px;
+    background-size: 949px 949px;
+  }
+  .home--header {
+    padding: 40px 0 198px;
+    background-position: 50% calc(50% - 333px);
   }
   .sitenav,
 .header__btn {
@@ -132,7 +139,7 @@ a {
     margin-right: 85px;
   }
   .sitenav__link {
-    font-family: "Public Sans";
+    font-family: "Public Sans", "Times New Roman", serif;
     font-weight: 700;
     font-size: 15px;
     line-height: 18px;
@@ -145,7 +152,7 @@ a {
     display: inline-block;
     width: 173px;
     padding: 15px 25px;
-    font-family: "Public Sans";
+    font-family: "Public Sans", "Times New Roman", serif;
     font-style: normal;
     font-weight: 700;
     font-size: 15px;
@@ -158,8 +165,151 @@ a {
     margin-left: auto;
   }
 }
-@media (max-width: 785px) {
+@media (min-width: 1200px) {
+  .header {
+    background-image: none;
+  }
+}
+.intro {
+  position: relative;
+  padding-top: 144px;
+  padding-bottom: 79px;
+}
+
+.intro__info {
+  width: 100%;
+  max-width: 327px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.intro__title {
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36px;
+  text-align: center;
+  color: #36536B;
+  margin-bottom: 24px;
+  letter-spacing: -0.246154px;
+}
+
+.intro__input {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 16px;
+  padding: 15px 27px;
+  background-color: #FBFCFE;
+  box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+  border: none;
+  border-radius: 24px;
+}
+
+.intro__btn {
+  display: inline-block;
+  width: 100%;
+  padding: 15px 25px;
+  font-family: "Public Sans", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: -0.115385px;
+  color: #FBFCFE;
+  background-color: #BA4270;
+  box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+  border-radius: 24px;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+.intro__btn:hover {
+  background-color: rgba(186, 66, 112, 0.7019607843);
+}
+.intro__btn:active {
+  background-color: rgba(186, 66, 112, 0.5019607843);
+}
+
+.intro__con-text {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: center;
+  color: #6C8294;
+  margin-top: 24px;
+}
+
+.intro__phone {
+  position: absolute;
+  width: 300px;
+  height: 393px;
+  top: -172px;
+  right: -47px;
+  left: 0;
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 650px) {
+  .home--header {
+    padding: 40px 0 184px;
+    background-position: 50% calc(50% - 262px);
+  }
+  .intro__info {
+    max-width: 573px;
+  }
+  .intro__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+  .intro__form {
+    position: relative;
+    width: 100%;
+    max-width: 445px;
+    margin: 0 auto;
+  }
+  .intro__input {
+    width: inherit;
+  }
+  .intro__btn {
+    position: absolute;
+    width: 39%;
+    right: 0;
+  }
+  .intro__con-text {
+    margin-top: 0;
+  }
+  .intro__phone {
+    width: 335px;
+    height: 455px;
+  }
+}
+@media only screen and (min-width: 912px) {
+  .intro__box {
+    display: flex;
+    align-items: center;
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+  .intro__info {
+    max-width: 52%;
+    margin: 0;
+  }
+  .intro__title {
+    font-size: 60px;
+    line-height: 68px;
+    text-align: left;
+  }
+  .intro__btn {
+    font-size: 14px;
+  }
+  .intro__con-text {
+    margin-left: 27px;
+  }
+}
+@media (min-width: 320px) {
   ol {
+    margin: 0;
+    padding: 0;
     list-style: none;
   }
   .price__box {
@@ -251,7 +401,7 @@ a {
     display: inline-block;
     width: 168px;
     padding: 15px 25px;
-    font-family: "Public Sans";
+    font-family: "Public Sans", "Times New Roman", serif;
     font-style: normal;
     font-weight: 700;
     font-size: 15px;
@@ -306,7 +456,7 @@ a {
     display: inline-block;
     width: 327px;
     padding: 15px 25px;
-    font-family: "Public Sans";
+    font-family: "Public Sans", "Times New Roman", serif;
     font-style: normal;
     font-weight: 700;
     font-size: 15px;
@@ -323,7 +473,7 @@ a {
     border: none;
   }
 }
-@media (max-width: 785px) {
+@media (min-width: 320px) {
   .footer {
     padding: 40px 0;
     background-color: #1B262F;
@@ -343,7 +493,7 @@ a {
     margin-bottom: 31px;
   }
   .footer__item-link {
-    font-family: "Public Sans";
+    font-family: "Public Sans", "Times New Roman", serif;
     font-weight: 700;
     font-size: 15px;
     line-height: 18px;
