--- a/scss/blocks/_pricing-hero.scss
+++ b/scss/blocks/_pricing-hero.scss
@@ -1,30 +1,32 @@
 
 @include for-size (phone-only) {
     ol{
+        margin: 0;
+        padding: 0;
         list-style: none;
     }
-    
+
     .price__box{
         width: 295px;
         margin: 0 auto;
-        
+
     }
-    
+
     .price__title{
         margin-bottom: 48px;
         @include txt-formats('DM Serif Display', 32px, 36px,  #36536B);
     }
-    
+
     .price__heading{
         margin-top: 48px;
         @include txt-formats('DM Serif Display', 24px, 32px, #BA4270);
-        letter-spacing: -0.184615px;  
+        letter-spacing: -0.184615px;
     }
-    
+
     .price__txt{
         display: none;
     }
-    
+
     .price__strong{
         display: block;
         margin-bottom: 24px;
@@ -39,9 +41,9 @@
             opacity: 0.25;
             content: " ";
         }
-        
+
     }
-    
+
     .price__list{
         width: 308px;
         margin: 0 auto;
@@ -59,7 +61,7 @@
 
 
 
-    
+
     .price__item{
         width: 145px;
         margin: 0 auto;
@@ -87,46 +89,46 @@
     //         }
     //     }
     // }
-    
-    
+
+
     // .price__item:nth-child(4){
         //     &::before{
-            
+
             //     }
             // }
-            
-            
+
+
             .price__item-link{
                 @include txt-formats("Public Sans", 16px, 28px, #36536B);
                 text-align: left;
             }
-            
+
             .price__button{
-                
+
                 @include site-button(168px, #36536B, transparent);
                 display: block;
                 margin: 0 auto;
                 border: 1px solid #36536B;
                 box-shadow: none;
-                
+
             }
-            
+
             .article{
                 padding: 80px 0;
             }
-            
+
             .article__title{
                 margin-bottom: 32px;
                 @include txt-formats('DM Serif Display', 32px, 36px,  #36536B)
             }
-            
+
             .article__label{
                 display: block;
                 width: 100%;
                 max-width: 445px;
                 margin: 0 auto;
             }
-            
+
             .article__input{
                 width: 100%;
                 max-width: 445px;
@@ -139,11 +141,11 @@
                 box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
                 border-radius: 24px;
                 border: none;
-                
+
             }
-            
+
             .article__btn{
-                
+
                 @include site-button(327px, #fff, #BA4270);
                 display: block;
                 width: 100%;
@@ -152,4 +154,3 @@
                 border: none
             }
         }
-        
