--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,5 +2,11 @@
 @import "container";
 @import "pricing-header";
 @import "pricing-hero";
+@import "pricing-footer";
+@import "header";
+@import "about-intro";
+@import "about-img";
+@import "about-content";
 
-@import "pricing-footer"
+
+
