--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -35,7 +35,7 @@
 
 @mixin for-size($size) {
     @if $size == phone-only {
-        @media (max-width: 785px) { @content; }
+        @media (min-width: 320px) { @content; }
     } @else if $size == tablet-landscape-up {
         @media (min-width: 786px) { @content; }
     } @else if $size == desktop-up {
