--- a/scss/blocks/_pricing-footer.scss
+++ b/scss/blocks/_pricing-footer.scss
@@ -6,9 +6,9 @@
         background-size: 780px 780px;
         background-repeat: no-repeat;
         background-position: calc(50% + 4px) calc(50% + 400px);
-       
+
     }
-    
+
     .footer__logo-img{
         margin: 0 auto;
         margin-bottom: 40px;
@@ -21,10 +21,9 @@
     .footer__item{
         margin-bottom: 31px;
     }
-    
+
     .footer__item-link{
         @include nav-formats(#FBFCFE);
-        // color: ;
     }
 
     .social{
@@ -35,4 +34,71 @@
     .social__item{
         margin-right: 24px;
     }
+
+    .social__link{
+        color: #fff;
+        transition: all .3s ease;
+        &:hover{
+            color: #DA6D97;
+        }
+    }
+}
+
+@include for-size (tablet-landscape-up) {
+
+    .footer{
+        padding: 31px 0;
+    }
+
+    .footer__box,
+    .footer__left,
+    .footer__list{
+        display: flex;
+        align-items: center;
+    }
+
+    .footer__item,
+    .footer__logo-img{
+        margin-bottom: 0;
+    }
+
+    .footer__logo-img{
+        margin-right: 64px;
+    }
+
+    .footer__item{
+        margin-right: 40px;
+    }
+
+    .footer__social-list{
+        margin-left: auto;
+    }
+
+}
+
+@include for-size(desktop-up) {  
+    
+
+
+    .article__input{
+        border: none;
+    }
+
+    .footer__item-link{
+        transition: all .3s ease;
+
+        &:hover{
+            color:#fff;
+            opacity: 1;
+        }
+    }
+
+    .social__link{
+        color: #fff;
+        transition: all .3s ease;
+        &:hover{
+            color: #DA6D97;
+        }
+    }
+
 }
