--- a/scss/blocks/_about-img.scss
+++ b/scss/blocks/_about-img.scss
@@ -46,7 +46,7 @@
     .wrapper {
         padding-top: 100px;
         padding-bottom: 100px;
-        background-image: url("../../images/header-bg.svg");
+        background-image: url("../images/header-bg.svg");
         background-repeat: no-repeat;
         background-size: 788px 700px;
         background-position: calc(50% - 722px) calc(50% - 0px);
