--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,6 +2,9 @@
 @import "container";
 @import "pricing-header";
 @import "intro";
+@import "work";
+@import "data";
+@import "connect";
 @import "pricing-hero";
 
 @import "pricing-footer"
