--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,20 @@ a {
   flex-grow: 1;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   width: 100%;
   max-width: 1160px;
@@ -59,13 +73,21 @@ a {
   padding: 0 25px;
 }
 
-@media (max-width: 785px) {
+@media (min-width: 320px) {
   .header {
     padding: 40px 0 52px;
-    background-image: url("../images/header-bg.svg");
+    background-image: url("../images/Bitmap-header-circle.svg");
     background-repeat: no-repeat;
     background-size: 780px 780px;
     background-position: calc(50% + 269px) calc(50% - 328px);
+  }
+  .home--header {
+    padding: 40px 0 166px;
+    background-position: 50% calc(50% - 275px);
+  }
+  .header__left {
+    display: flex;
+    align-items: center;
   }
   .sitenav,
 .header__hamburger-close,
@@ -93,15 +115,32 @@ a {
     border: none;
   }
 }
-@media (min-width: 786px) {
+@media only screen and (min-width: 660px) {
+  .home--header {
+    padding: 40px 0 184px;
+    background-position: 50% calc(50% - 262px);
+  }
+}
+@media only screen and (min-width: 768px) {
+  .site-body {
+    background-position: 50% calc(1% - 635px);
+    background-size: 949px 949px;
+  }
+}
+@media (min-width: 768px) {
   body {
     background-size: 780px 780px;
     background-image: url("../images/Bitmap-header-circle.svg");
-    background-position: calc(50% - 1px) calc(50% + 1px);
+    background-position: calc(50% + 455px) calc(50% - 207px);
     background-repeat: no-repeat;
   }
   .header {
     padding: 40px 0 52px;
+    background-image: none;
+  }
+  .home--header {
+    padding: 40px 0 212px;
+    background-position: 50% calc(50% - 262px);
   }
   .header__wrap,
 .lst {
@@ -133,7 +172,6 @@ a {
     font-size: 15px;
     line-height: 18px;
     color: #36536B;
-    mix-blend-mode: normal;
     opacity: 0.7;
     opacity: 0.7;
   }
@@ -154,7 +192,528 @@ a {
     margin-left: auto;
   }
 }
-@media (max-width: 785px) {
+@media only screen and (min-width: 912px) {
+  .site-body {
+    background-size: 780px 834px;
+    background-image: url("../images/body-bg-ds.svg");
+    background-position: calc(50% + 455px) calc(1% - 150px);
+    background-repeat: no-repeat;
+  }
+  .home--header {
+    padding: 40px 0 52px;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+    background-position: calc(50% + 455px) calc(50% - 450px);
+    background-image: none;
+  }
+  .sitenav__link {
+    transition: all 0.3s ease;
+  }
+  .sitenav__link:hover {
+    opacity: 1;
+  }
+  .header__btn {
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .header__btn:hover {
+    background-color: #DA6D97;
+  }
+  .header__btn:active {
+    opacity: 0.7;
+  }
+}
+.intro {
+  position: relative;
+  padding-top: 144px;
+  padding-bottom: 79px;
+}
+
+.intro__info {
+  width: 100%;
+  max-width: 327px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.intro__title {
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36px;
+  text-align: center;
+  color: #36536B;
+  margin-bottom: 24px;
+  letter-spacing: -0.246154px;
+}
+
+.intro__input {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 16px;
+  padding: 15px 27px;
+  background-color: #FBFCFE;
+  box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+  border: none;
+  border-radius: 24px;
+}
+
+.intro__btn {
+  display: inline-block;
+  width: 100%;
+  padding: 15px 25px;
+  font-family: "Public Sans", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: -0.115385px;
+  color: #FBFCFE;
+  background-color: #BA4270;
+  box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+  border-radius: 24px;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+.intro__btn:hover {
+  background-color: rgba(186, 66, 112, 0.7019607843);
+}
+.intro__btn:active {
+  background-color: rgba(186, 66, 112, 0.5019607843);
+}
+
+.intro__con-text {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: center;
+  color: #6C8294;
+  margin-top: 24px;
+}
+
+.intro__phone {
+  position: absolute;
+  width: 275px;
+  height: 380px;
+  top: -165px;
+  right: -47px;
+  left: 0;
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 660px) {
+  .intro__info {
+    max-width: 573px;
+  }
+  .intro__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+  .intro__form {
+    position: relative;
+    width: 100%;
+    max-width: 445px;
+    margin: 0 auto;
+  }
+  .intro__input {
+    width: inherit;
+  }
+  .intro__btn {
+    position: absolute;
+    width: 39%;
+    right: 0;
+  }
+  .intro__con-text {
+    margin-top: 0;
+  }
+  .intro__phone {
+    top: -190px;
+    width: 335px;
+    height: 455px;
+  }
+}
+@media only screen and (min-width: 912px) {
+  .intro {
+    padding-top: 95px;
+    padding-bottom: 152px;
+  }
+  .intro__box {
+    display: flex;
+    align-items: center;
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+  .intro__info {
+    max-width: 52%;
+    margin: 0;
+  }
+  .intro__title {
+    margin: 0;
+    margin-bottom: 21px;
+    font-size: 60px;
+    line-height: 68px;
+    text-align: left;
+  }
+  .intro__form {
+    margin: 0;
+  }
+  .intro__btn {
+    font-size: 14px;
+  }
+  .intro__con-text {
+    margin-left: 27px;
+  }
+  .intro__phone {
+    display: none;
+  }
+  .intro__bg {
+    position: relative;
+  }
+  .intro__bg::before {
+    position: absolute;
+    display: block;
+    right: 0;
+    left: 0;
+    width: 780px;
+    height: 834px;
+    margin: 0 auto;
+    background-image: url("../images/body-bg-ds.svg");
+    background-repeat: no-repeat;
+  }
+}
+.work {
+  width: 100%;
+  background-image: url("../images/work-bg.svg");
+  background-position: top center;
+  background-size: cover;
+  padding: 88px 0;
+  color: #FBFCFE;
+}
+
+.work__wrappper {
+  display: flex;
+  align-items: center;
+  flex-direction: column-reverse;
+}
+
+.work__info {
+  width: 100%;
+  max-width: 457px;
+  margin: 0 auto;
+  margin-top: 56px;
+  text-align: center;
+}
+
+.work__title {
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.work__text {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 60px;
+  opacity: 0.7;
+}
+
+.work__link {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: center;
+  color: #FBFCFE;
+  display: inline-block;
+  padding: 15px 32px;
+  border: 1px solid #FBFCFE;
+  border-radius: 24px;
+}
+.work__link:hover {
+  color: #1B262F;
+  background-color: #FBFCFE;
+}
+.work__link:active {
+  opacity: 0.5;
+}
+
+.work__list {
+  display: grid;
+  justify-items: center;
+  grid-template-rows: repeat(3, 22px);
+  grid-template-columns: repeat(2, 120px);
+  grid-gap: 39px 50px;
+}
+
+.work__item {
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .work {
+    background-position: center center;
+  }
+  .work__info {
+    margin-top: 64px;
+  }
+  .work__title {
+    margin-bottom: 24px;
+    font-size: 48px;
+    line-height: 56px;
+  }
+  .work__list {
+    display: grid;
+    grid-template-rows: repeat(2, 22px);
+    grid-template-columns: repeat(3, 120px);
+    grid-gap: 39px 50px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .work {
+    background-image: url("../images/work-bg-ds.svg");
+    background-position: center center;
+  }
+  .work__wrappper {
+    width: 100%;
+    max-width: 1112px;
+    margin: 0 auto;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  .work__info {
+    margin: 0;
+    text-align: left;
+  }
+  .work__title {
+    margin-bottom: 24px;
+    font-size: 48px;
+    line-height: 56px;
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+  .work__text {
+    text-align: left;
+  }
+}
+.data {
+  padding: 50px 0;
+}
+
+.data__list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.data__item:first-child {
+  margin-bottom: 50px;
+}
+
+.data__img {
+  width: 320px;
+  -o-object-fit: 1;
+     object-fit: 1;
+  margin: 0 auto;
+}
+
+.data__box {
+  width: 100%;
+  max-width: 573px;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.data__title {
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  color: #36536B;
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.data__text {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  color: #6C8294;
+  margin: 0;
+}
+
+@media only screen and (min-width: 500px) {
+  .data__img {
+    width: 460px;
+  }
+  .data__box {
+    padding: 0;
+  }
+  .data__title {
+    font-size: 38px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .data__img {
+    width: 500px;
+  }
+  .data__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .data__item {
+    display: flex;
+    align-items: center;
+  }
+  .data__item:nth-child(1) {
+    margin-bottom: 30px;
+  }
+  .data__item:nth-child(2) {
+    flex-direction: row-reverse;
+  }
+  .data__img {
+    width: 460px;
+  }
+  .data__box {
+    max-width: 445px;
+    padding: 0;
+  }
+  .data__title {
+    font-size: 38px;
+    text-align: left;
+  }
+  .data__text {
+    text-align: left;
+  }
+}
+.connect {
+  padding-top: 30px;
+  padding-bottom: 80px;
+}
+
+.connect__list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 80px;
+}
+
+.connect__item {
+  width: 100%;
+  max-width: 350px;
+  text-align: center;
+}
+.connect__item:not(:last-child) {
+  margin-bottom: 48px;
+}
+.connect__item::before {
+  content: "";
+  display: inline-block;
+  width: 106px;
+  height: 106px;
+  margin: 0 auto;
+  margin-bottom: 33px;
+  background-repeat: no-repeat;
+}
+.connect__item:nth-child(1)::before {
+  background-image: url("../images/personal-icon.svg");
+}
+.connect__item:nth-child(2)::before {
+  background-image: url("../images/banking-icon.svg");
+}
+.connect__item:nth-child(3)::before {
+  background-image: url("../images/consumer.svg");
+}
+
+.connect__title {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  color: #36536B;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.connect__text {
+  font-family: "Public Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  color: #6C8294;
+  margin: 0;
+}
+
+.contact-us {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact-us__title {
+  margin: 0;
+  margin-bottom: 32px;
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36px;
+  letter-spacing: -0.246154px;
+  color: #36536B;
+}
+
+.contact-us .intro__form {
+  margin: 0;
+}
+
+@media only screen and (min-width: 500px) {
+  .connect__title {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .connect__list {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .connect__item:not(:last-child) {
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+  .contact-us__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .connect__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .contact-us {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 320px) {
   ol {
     margin: 0;
     padding: 0;
@@ -329,7 +888,269 @@ a {
     border: none;
   }
 }
-@media (max-width: 785px) {
+@media (min-width: 768px) {
+  ol {
+    display: flex;
+  }
+  .price__box {
+    width: 100%;
+    max-width: 223px;
+  }
+  .price__title {
+    margin-bottom: 69px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    color: #36536B;
+  }
+  .price__heading {
+    margin-top: 0;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 40px;
+    text-align: center;
+    color: #BA4270;
+    letter-spacing: -0.184615px;
+  }
+  .price__txt {
+    display: block;
+    margin-bottom: 19px;
+    font-family: "Public Sans";
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 28px;
+    text-align: center;
+    color: #36536B;
+    text-align: center;
+  }
+  .price__strong {
+    display: block;
+    margin-bottom: 24px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    color: #36536B;
+  }
+  .price__list {
+    width: 223px;
+    margin: 0 auto;
+  }
+  .price__list::after {
+    width: 239px;
+    content: " ";
+  }
+  .price__item {
+    width: 223px;
+    margin-bottom: 8px;
+  }
+  .price__item-link {
+    font-family: "Public Sans";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .article {
+    padding: 100px 0;
+  }
+  .article__title {
+    margin-bottom: 40px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    color: #36536B;
+  }
+  .article__form {
+    display: flex;
+    justify-content: center;
+  }
+  .article__label {
+    display: block;
+    width: 100%;
+    max-width: 445px;
+    margin: 0;
+  }
+  .article__input {
+    position: relative;
+    padding: 14px 25px;
+    font-family: "Public Sans";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 18px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .article__btn {
+    position: absolute;
+    right: calc(50% - 256px);
+    display: inline-block;
+    width: 173px;
+    padding: 15px 25px;
+    font-family: "Public Sans", "Times New Roman", serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: -0.115385px;
+    color: #fff;
+    background-color: #BA4270;
+    box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+    border-radius: 24px;
+    padding: 16px 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .price__box {
+    width: 100%;
+    max-width: 350px;
+  }
+  .price__title {
+    margin-bottom: 72px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 56px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .price__heading {
+    margin-top: 0;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 40px;
+    text-align: center;
+    color: #BA4270;
+    letter-spacing: -0.184615px;
+    text-align: left;
+  }
+  .price__txt {
+    display: block;
+    margin-bottom: 19px;
+    font-family: "Public Sans";
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 28px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .price__strong {
+    display: block;
+    margin-bottom: 24px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 72px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .price__strong::after {
+    width: 350px;
+    margin: 24px 0;
+  }
+  .price__list {
+    width: 223px;
+    margin: 0;
+  }
+  .price__list::after {
+    width: 350px;
+    content: " ";
+  }
+  .price__item {
+    width: 223px;
+    margin-bottom: 8px;
+  }
+  .price__item-link {
+    font-family: "Public Sans";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    color: #36536B;
+    text-align: left;
+  }
+  .price__button {
+    margin: 0;
+    transition: all 0.3s ease;
+  }
+  .price__button:hover {
+    color: #fff;
+    background-color: #36536B;
+  }
+  .price__button:active {
+    color: #36536B;
+    background-color: #fff;
+    opacity: 0.5;
+  }
+  .article {
+    padding: 96px 0;
+  }
+  .article__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .article__title {
+    margin-bottom: 40px;
+    font-family: "DM Serif Display";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    color: #36536B;
+  }
+  .article__label {
+    display: block;
+    width: 445px;
+    margin: 0;
+  }
+  .article__input {
+    outline: none;
+  }
+  .article__input:focus {
+    box-shadow: 0 0 2px 0 #808181;
+  }
+  .article__btn {
+    position: absolute;
+    right: calc(50% - 558px);
+    display: inline-block;
+    width: 173px;
+    padding: 15px 25px;
+    font-family: "Public Sans", "Times New Roman", serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: -0.115385px;
+    color: #fff;
+    background-color: #BA4270;
+    box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+    border-radius: 24px;
+    padding: 17px 25px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .article__btn:hover {
+    background-color: #DA6D97;
+  }
+  .article__btn:active {
+    opacity: 0.7;
+  }
+}
+@media (min-width: 320px) {
   .footer {
     padding: 40px 0;
     background-color: #1B262F;
@@ -354,7 +1175,6 @@ a {
     font-size: 15px;
     line-height: 18px;
     color: #FBFCFE;
-    mix-blend-mode: normal;
     opacity: 0.7;
   }
   .social {
@@ -363,6 +1183,13 @@ a {
   }
   .social__item {
     margin-right: 24px;
+  }
+  .social__link {
+    color: #fff;
+    transition: all 0.3s ease;
+  }
+  .social__link:hover {
+    color: #DA6D97;
   }
 }
 @media (min-width: 768px) {
