--- a/scss/blocks/_pricing-footer.scss
+++ b/scss/blocks/_pricing-footer.scss
@@ -1,4 +1,3 @@
-
 @include for-size (phone-only) {
     .footer{
         padding: 40px 0;
@@ -7,33 +6,41 @@
         background-size: 780px 780px;
         background-repeat: no-repeat;
         background-position: calc(50% + 4px) calc(50% + 400px);
-        
+
     }
-    
+
     .footer__logo-img{
         margin: 0 auto;
         margin-bottom: 40px;
     }
-    
+
     .footer__list{
         text-align: center;
     }
-    
+
     .footer__item{
         margin-bottom: 31px;
     }
-    
+
     .footer__item-link{
         @include nav-formats(#FBFCFE);
     }
-    
+
     .social{
         display: flex;
         justify-content: center;
     }
-    
+
     .social__item{
         margin-right: 24px;
+    }
+
+    .social__link{
+        color: #fff;
+        transition: all .3s ease;
+        &:hover{
+            color: #DA6D97;
+        }
     }
 }
 
@@ -42,14 +49,14 @@
     .footer{
         padding: 31px 0;
     }
-   
+
     .footer__box,
     .footer__left,
     .footer__list{
         display: flex;
         align-items: center;
     }
-    
+
     .footer__item,
     .footer__logo-img{
         margin-bottom: 0;
@@ -66,7 +73,7 @@
     .footer__social-list{
         margin-left: auto;
     }
-    
+
 }
 
 @include for-size(desktop-up) {
@@ -74,7 +81,7 @@
     .article__input{
         border: none;
     }
-    
+
     .footer__item-link{
         transition: all .3s ease;
 
