--- a/scss/blocks/_pricing-header.scss
+++ b/scss/blocks/_pricing-header.scss
@@ -1,26 +1,26 @@
 @include for-size (phone-only) {
-    body{
-        border-image: none;
-        overflow-x: hidden;
-    }
     .header{
         padding: 40px 0 52px;
-        background-image: url("../images/header-bg.svg");
+        background-image: url("../images/Bitmap-header-circle.svg");
         background-repeat: no-repeat;
         background-size: 780px 780px;
         background-position: calc(50% + 269px) calc(50% - 328px);
+    }
+
+    .home--header{
+        padding: 40px 0 166px;
+        background-position:calc(50%) calc(50% - 275px) ;
+    }
+
+    .header__left{
+        display: flex;
+        align-items: center;
     }
 
     .sitenav,
     .header__hamburger-close,
     .header__btn{
         display: none;
-    }
-
-    .header__left{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
     }
 
     .nav-link{
@@ -47,25 +47,53 @@
     }
 }
 
+@media only screen and (min-width:660px){
+
+    .home--header{
+        padding: 40px 0 184px;
+        background-position: 50% calc(50% - 262px);
+    }
+}
+
+@media only screen and (min-width:768px){
+    .site-body{
+        background-position: calc(50%) calc(1% - 635px);
+        background-size: 949px 949px;
+    }
+}
+
 @include for-size (tablet-landscape-up) {
+
 
     body{
         background-size: 780px 780px;
         background-image: url("../images/Bitmap-header-circle.svg");
-        background-position: calc(50% - 1px) calc(50% + 1px);
+        background-position: calc(50% + 455px) calc(50% - 207px);
         background-repeat: no-repeat;
     }
 
     .header{
         padding: 40px 0 52px;
-
+        background-image: none;
     }
 
+    .home--header{
+        padding: 40px 0 212px;
+        background-position: 50% calc(50% - 262px);
+    }
 
+    .header__wrap,
+    .lst{
+        display: flex;
+    }
 
-    .sitenav,
-    .header__btn{
-        display: block;
+    .header__navbar{
+        width: 100%;
+    }
+
+    .sitenav{
+        display: flex;
+        align-items: center;
     }
 
     .header__hamburger,
@@ -75,13 +103,6 @@
 
     .logo__img{
         margin-right: 64px;
-    }
-
-    .header__left,
-    .header__navbar,
-    .sitenav__list{
-        display: flex;
-        align-items: center;
     }
 
     .sitenav__item:not(:last-child){
@@ -101,5 +122,46 @@
     .header__btn{
         @include site-button(173px, #fff,  #BA4270);
         margin-left: auto;
+    }
+}
+
+@media only screen and (min-width:912px){
+
+    .site-body{
+        background-size: 780px 834px;
+        background-image: url("../images/body-bg-ds.svg");
+        background-position: calc(50% + 455px) calc(1% - 150px);
+        background-repeat: no-repeat;
+    }
+
+    .home--header{
+        padding: 40px 0 52px;
+    }
+}
+
+
+@include for-size (desktop-up) {
+    body{
+        background-position: calc(50% + 455px) calc(50% - 450px);
+        background-image: none;
+    }
+
+    .sitenav__link{
+        transition: all .3s ease;
+        &:hover{
+            opacity: 1;
+        }
+    }
+
+    .header__btn{
+        transition: all .3s ease;
+        cursor: pointer;
+        &:hover{
+            background-color: #DA6D97;
+        }
+
+        &:active{
+            opacity: 0.7;
+        }
     }
 }
