Add contact page

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,13 +1,11 @@
 @import "visually-hidden";
 @import "container";
+@import "header";
 @import "pricing-header";
 @import "intro";
 @import "pricing-hero";
-@import "pricing-footer";
-@import "header";
+@import "contact-hero";
 @import "about-intro";
 @import "about-img";
 @import "about-content";
-
-
-
+@import "pricing-footer";
