--- a/scss/blocks/_pricing-footer.scss
+++ b/scss/blocks/_pricing-footer.scss
@@ -8,18 +8,17 @@
         background-repeat: no-repeat;
         background-position: calc(50% + 4px) calc(50% + 400px);
 
-        
     }
 
     .footer__logo-img{
         margin: 0 auto;
         margin-bottom: 40px;
     }
-    
+
     .footer__list{
         text-align: center;
     }
-    
+
     .footer__item{
         margin-bottom: 31px;
     }
@@ -27,12 +26,12 @@
     .footer__item-link{
         @include nav-formats(#FBFCFE);
     }
-    
+
     .social{
         display: flex;
         justify-content: center;
     }
-    
+
     .social__item{
         margin-right: 24px;
     }
@@ -44,6 +43,7 @@
             color: #DA6D97;
         }
     }
+
 }
 
 @include for-size (tablet-landscape-up) {
@@ -52,8 +52,6 @@
         padding: 31px 0;
     }
 
-
-
     .footer__box,
     .footer__left,
     .footer__list{
@@ -61,10 +59,6 @@
         align-items: center;
     }
 
-
-
-    
-f
     .footer__item,
     .footer__logo-img{
         margin-bottom: 0;
@@ -82,23 +76,22 @@ f
         margin-left: auto;
     }
 
-}
+    .social__link{
+        color: #fff;
+        transition: all .3s ease;
+        &:hover{
+            color: #DA6D97;
+        }
+    }
 
-@include for-size(desktop-up) {  
-    
 
-
-    
 }
 
 @include for-size(desktop-up) {
 
-
     .article__input{
         border: none;
     }
-
-
 
     .footer__item-link{
         transition: all .3s ease;
